2017-08-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Ability to apply functions with multiple arguments to the rpn stack (including using the whole stack for functions with a vector as argument)

2017-08-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Derivatives of inverse and hyberbolic functions

2017-08-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Enhance gamma(). Add digamma(), arg(), conj(), besselj(), bessely(), airy(), erf(), erfc()

2017-08-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix decimal exact fractional format for large numerators and denominators
	* Avoid display of numbers with extremely large number of digits (> 10000000) for all options

2017-08-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix trigonometric functions with angle unit other than radian 

2017-08-07 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Include system-wide exchange rates file to avoid issues with missing currencies and the need to ask first-time users questions
	* Reactivate deactivated global variables, units and functions after conflicting local object has been removed

2017-08-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Set argument min/max from requested integer type

2017-08-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fixes for MS Windows (now compiles, and runs without apparent issues, with MinGW)

2017-08-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Rewritten date functions with support for larger numbers
	* Check if variable exists in save (:=) function
	* Fix case insensitive comparison where upper and lower case string have different length

2017-08-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use libcurl instead of gvfs/wget
	* Remove glib dependency (require instead iconv and icu)

2017-08-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Handle errors on thread read and write (seems to solve issue #38)

2017-08-01 Hanna Knutsson <hanna.knutsson@protonmail.com>
